# defense-drift

./: .gitignore  CLAUDE.md  Defense-Drift-方案.md  README.md  download_datasets.py  pyproject.toml  requirements.txt  separability_collapse.yaml  separability_diagnostic.py
data/: __init__.py  loader.py  schemas.py
defend_data/: bioasq_queries.jsonl  finance_queries.jsonl  hotpotqa_queries.jsonl  nq_queries.jsonl
injectors/: __init__.py  base.py  corruptrag.py  poisonedrag.py
models/: __init__.py  generator.py  reranker.py
pipeline/: __init__.py  assemble_units.py  build_collapse_matrix.py
retrieval/: __init__.py  chunker.py  embedder.py  retriever.py
scorers/: __init__.py  attention_variance.py  base.py  cluster_distance.py  drs.py  perplexity.py
tests/: __init__.py  test_attention_variance.py  test_cluster_distance.py  test_drs.py  test_injectors.py  test_perplexity.py  test_pipeline.py
utils/: __init__.py  config.py  metrics.py  results.py
