[project]
name = "defense-drift"
version = "0.1.0"
description = "Cross-domain separability collapse diagnostic for RAG poison defenses"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.7.4",
    "datasets>=2.18.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
